--- a/index .html
+++ b/index .html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style copy.css">
+  <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | Article preview component</title>
 
