--- a/index .html
+++ b/index .html
@@ -48,12 +48,14 @@
               <img class="icon-img" src="images/icon-share.svg" alt="share">
               <div class="active-state">
                 <span>SHARE</span>
-                <img class="as-img-1" src="images/icon-facebook.svg" alt="facebook">
-                <img class="as-img-2" src="images/icon-twitter.svg" alt="twitter">
-                <img class="as-img-3" src="images/icon-pinterest.svg" alt="pinterest">
+               <a href="https://www.facebook.com/" target="_blank"> <img class="as-img-1" src="images/icon-facebook.svg" alt="facebook"> </a>
+               <a href="https://twitter.com/" target="_blank"> <img class="as-img-2" src="images/icon-twitter.svg" alt="twitter"> </a>
+               <a href="https://tr.pinterest.com/" target="_blank"> <img class="as-img-3" src="images/icon-pinterest.svg" alt="pinterest"> </a> 
               </div>
           
               <div class="arrow"></div>
+              <div class="hidden"></div>
+              
               <!-- .icon-img .active-state ve .arrow aynı <div> içerisinde olmalı -->
               <!-- <svg id="icon-svg" xmlns="http://www.w3.org/2000/svg" width="15" height="13">
               <path id="icon-path" fill="#6E8098" d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z"/></svg> -->
